fixed widths/ alignment for media obects, twitter section, media small, and top news section

--- a/src/styles/components/_media-object.scss
+++ b/src/styles/components/_media-object.scss
@@ -5,6 +5,10 @@
   margin-bottom: 6em;
 }
 
+.category {
+  width:85%;
+}
+
 .category-content .media-object:nth-child(1) {
   margin-top: 5em;
 }
