--- a/src/styles/components/_media-object__twitter.scss
+++ b/src/styles/components/_media-object__twitter.scss
@@ -1,11 +1,17 @@
 .media-object-twitter {
   display: inline-grid;
   grid-template-columns: 1fr 3fr;
-  max-width: 35%;
-  margin: 30px 50px;
+  max-width: 38%;
+  margin-top:30px;
+  margin-bottom: 30px;
+  margin-left:0;
+
+  .tw-user-handle {
+    padding-left:4px;
+  }
 
   .tw-user {
-    padding: 20px;
+    // padding: 20px;
     display: grid;
     grid-template-columns: 1fr 2fr;
     justify-content: center;
@@ -39,7 +45,7 @@
   }
 
   .tw-follow {
-    padding: 15px 20px;
+    // padding: 15px 20px;
     justify-self: end;
 
     a {
@@ -53,6 +59,8 @@
 
   .tw-message {
     padding: 0 20px;
+    padding-top:15px;
+    padding-bottom: 0;
     grid-column: span 2;
     padding-left: 0;
     font-weight: bold;
@@ -61,6 +69,10 @@
   .tw-posted-on {
     color: $medGray;
     padding: 15px 20px 10px;
+    padding-top:15px;
+    padding-bottom: 15px;
+    padding-left:0;
+    padding-right: 0;
     font-weight: bold;
     font-size: 0.85rem;
     grid-column: span 2;
@@ -76,7 +88,11 @@
   }
 
   .tw-action {
-    padding: 10px 20px 10px 0;
+    // padding: 10px 20px 10px 0;
+    padding-top:10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    padding-left: 0;
     grid-column: span 2;
     font-size: 1.2rem;
 
@@ -90,4 +106,17 @@
       }
     }
   }
+}
+
+
+
+
+
+.media-object-twitter:last-child {
+  margin-left: 7rem;
+  margin-right: 0;
+}
+
+.media-object-twitter:nth-child(odd) {
+  margin-right: 7rem;
 }
